NOW fixes nav scrolling on mobile bug

--- a/components/navigation.css
+++ b/components/navigation.css
@@ -2,6 +2,7 @@
     display: block;
     margin-left: -16px;
     margin-right: -16px;
+    overflow: hidden;
 }
 
 *[noclass] nav label, 
